# vector_ext

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  algo.cxx  kernel.cu  main  main.cpp  main.cu  test  test.cu  vector_ext.hpp
include/: kernel_impl.cuh  quaternion.cuh  simd_vector_operations.hpp  types.cuh  vector_ext.cuh
src/: kernel.cu  kernel_impl.cu  kernel_implementation_tests.cu  quaternion_test.cu  simd_vector_operations_neon.cpp  simd_vector_operations_x86.cpp  simd_vector_ops_test.cpp  test.cu  vector_ext_cuda_test.cu  vector_ext_execution_policy_test.cu  vector_ext_openmp_test.cu  vector_ext_test.cu
src/scripts/: generate_test_shell.sh
text_includes/: text_formatting.cuh
